# lumi

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  compose.yaml  deny.toml
.github/workflows/: deploy.yml  main.yml
apps/web/: Cargo.toml  Dioxus.toml
apps/web/assets/: main.css
apps/web/src/: account.rs  main.rs  reader.rs
crates/lumi-core/: Cargo.toml
crates/lumi-core/src/: auth.rs  epub.rs  fixtures.rs  lib.rs  models.rs  reader.rs  sources.rs
crates/lumi-server/: Cargo.toml
crates/lumi-server/migrations/: 20260713090000_stage1_persistent_account.sql  20260713130000_stage2_real_epub_import.sql  20260713170000_stage3_api_backed_library.sql  20260713200000_stage4_reader.sql  20260713230000_stage5_durable_annotations.sql  20260714020000_stage6_web_telegram_sources.sql  20260714150000_stage8_beta_projection.sql  20260722120000_telegram_bot_settings.sql  20260722150000_telegram_composite_import.sql
crates/lumi-server/src/: account.rs  auth_api.rs  blob.rs  imports.rs  lib.rs  main.rs  telegram.rs  telegram_media.rs  telegram_runtime.rs  web.rs
deployments/: Dockerfile.server  Dockerfile.web  alerts.yaml  compose.staging.yaml  nginx.local.conf  staging.env.example
docs/: README.md  VISION.md  early-slices.md
docs/adr/: 0001-development-environment.md  0002-s0-seed-auth-prototype.md  0003-seed-derived-challenge-auth.md  0004-postgresql-sync-ready-schema.md  0005-epub-import-stack-and-limits.md  0006-browser-measured-pagination.md  0007-durable-import-jobs-and-blob-store.md  0008-reader-settings-and-progress-scope.md  0009-source-backed-anchor-v2.md  0010-web-telegram-source-baseline.md  0011-beta-operations-and-telegram-webhook.md  0012-embedded-telegram-bot-settings.md  0013-telegram-composite-import.md  README.md
docs/en/: README.md  early-slices.md  vision.md
docs/en/adr/: README.md
docs/en/runbooks/: local-dev.md
docs/en/system-design/: README.md  obsidian.md
docs/en/system-design/formats/: fb2.md
docs/ru/: README.md  early-slices.md
docs/ru/adr/: 0001-development-environment.md  0002-s0-seed-auth-prototype.md
docs/ru/system-design/: README.md  ai.md  backend-api.md  plugins.md  quality.md  web-account.md
docs/ru/system-design/formats/: lum.md  telegram.md  web-reader.md
docs/runbooks/: api-backed-library.md  beta-staging.md  durable-annotations.md  local-dev.md  persistent-account.md  production-deploy.md  real-epub-import.md  web-telegram-baseline.md  working-reader.md
docs/system-design/: README.md  ai.md  backend-api.md  early-slices.md  feature-registry.md  knowledge-base.md  learning.md  normalized-content.md  obsidian.md  plugins.md  quality.md  reader-architecture.md  reading-screen.md  search.md  security-privacy.md  social.md  sync.md  web-account.md
docs/system-design/formats/: epub.md  fb2.md  lum.md  markdown.md  pdf.md  telegram.md  web-reader.md  x.md
docs/systems/: README.md  backend-api.md  normalized-content.md  quality.md  reader-architecture.md  reading-screen.md  search.md  security-privacy.md  social.md  sync.md  web-account.md
docs/systems/formats/: epub.md  pdf.md  telegram.md  x.md
docs/tmp-plans/: README.md  playwright-agent-inspection.md  s1-issues.md  s1-web-epub-reader.md  s1-web-reader.md  telegram-composite-import.md
docs/visuals/: README.md  reader-first-direction.md
docs/visuals/pagination-spike/: README.md  index.html  script.js  styles.css
docs/visuals/prototype/: index.html  script.js  styles.css
ops/: .env.example  Makefile  README.md  compose.yaml  images.env.example  lumi-ci-root  sudoers.example  validate-release-manifest.sh
scripts/: backup.sh  beta-gate.sh  beta-local-gate.sh  pack-golden-epub.sh  production-compose-smoke.sh  restore-drill.sh  staging-smoke.sh  test_cicd_contract.py  test_restore_attestation.py  validate_restore_attestation.py  write-release-manifest.sh
spikes/stage0/: Cargo.toml
spikes/stage0/src/: auth.rs  epub.rs  lib.rs
tests/e2e/: package-lock.json  package.json  pagination-spike.playwright.config.ts  pagination-spike.spec.ts  playwright.config.ts  prototype.playwright.config.ts  prototype.spec.ts  real-profile.spec.ts  smoke.spec.ts  tsconfig.json
tests/fixtures/epub/: README.md  malicious-corpus.json  supported.expected.json
tests/fixtures/epub/supported/EPUB/: nav.xhtml  package.opf
tests/fixtures/epub/supported/EPUB/text/: chapter.xhtml
tests/fixtures/telegram/: direct-text.json  duplicate.json  forwarded-text.json  pairing.json  unpaired.json  unsupported.json  web-link.json
tests/fixtures/web/: article.html  bad-extraction.html  habr-layout.html  metadata-code-list.html
