[workspace]
members = [
  "apps/web",
  "crates/lumi-core",
  "crates/lumi-server",
  "spikes/stage0",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.103"
ammonia = "4.1.4"
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22.1"
dioxus = { version = "0.7.0", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false, features = [
  "fast",
  "rand_core",
] }
encoding_rs = "0.8.35"
flate2 = { version = "1.1.9", default-features = false, features = [
  "rust_backend",
] }
hkdf = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx-core = { version = "=0.8.6", default-features = false, features = [
  "_rt-tokio",
  "_tls-rustls-ring-webpki",
  "json",
  "migrate",
] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = [
  "json",
  "migrate",
  "time",
  "uuid",
] }
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tower = { version = "0.5.3", features = ["limit", "util"] }
tower-http = { version = "0.6.11", features = [
  "cors",
  "request-id",
  "timeout",
  "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "fmt",
  "json",
] }
quick-xml = "0.41.0"
scraper = "0.27.0"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["js", "serde", "v7"] }
zeroize = "1.8.2"
zip = { version = "4.6.1", default-features = false, features = [
  "deflate-flate2",
] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"
