[package]
name = "lumi-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
lumi-core = { version = "0.1.0", path = "../../crates/lumi-core" }
serde.workspace = true
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
bip39 = { version = "2.2.0", features = ["rand"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.17", features = ["js"] }
gloo-net = { version = "0.6.0", features = ["http", "json"] }
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
  "Blob",
  "Document",
  "FormData",
  "HtmlDocument",
  "Location",
  "Window",
] }

[features]
default = ["web"]
check = ["dioxus/minimal"]
web = ["dioxus/minimal", "dioxus/web"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[lints]
workspace = true
