[package]
name = "lumi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ammonia.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
hkdf.workspace = true
quick-xml.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true
zip.workspace = true

[lints]
workspace = true
