[package]
name = "lumi-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
base64.workspace = true
ed25519-dalek.workspace = true
lumi-core = { version = "0.1.0", path = "../lumi-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
