[package]
name = "lumi-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
base64.workspace = true
ed25519-dalek.workspace = true
encoding_rs.workspace = true
lumi-core = { version = "0.1.0", path = "../lumi-core" }
rand.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
thiserror.workspace = true
time.workspace = true
teloxide-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
