[package]
name = "lumi-stage0-spikes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ammonia = "4.1.3"
ed25519-dalek = { version = "2.2.0", default-features = false, features = [
  "fast",
  "zeroize",
] }
hkdf = "0.12.4"
flate2 = { version = "1.1.9", default-features = false, features = [
  "rust_backend",
] }
quick-xml = "0.41.0"
scraper = "0.27.0"
sha2.workspace = true
thiserror.workspace = true
url = "2.5.8"
zeroize = "1.8.2"
zip = { version = "4.6.1", default-features = false, features = [
  "deflate-flate2",
] }

[lints]
workspace = true
